ldap_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-service
  namespace: core-namespace
  labels:
    app: ldap-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap-service
  template:
    metadata:
      labels:
        app: ldap-service
    spec:
      containers:
      - name: ldap-service
        image: iiotlaabs.azurecr.io/iiot-hub-server/ldap-service
        ports:
        - containerPort: 8083
      imagePullSecrets:
      - name: cr-secret
---
kind: Service
apiVersion: v1
metadata:
  name: ldap-service
  namespace: core-namespace
spec:
  type: ClusterIP
  selector:
    app: ldap-service
  ports:
    - port: 80
      targetPort: 8082
