iiot-ingress.yaml
iiot ingress definition 
=========================

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iiot-ingress
  namespace: core-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: iiot-lab.alstom.hub  
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: iiot-hub-webapp
            port:
              number: 80
